--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,15 @@
+// android/build.gradle
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.1.1' // Adjust this to match your Flutter and Gradle versions
+        classpath 'com.google.gms:google-services:4.3.15' // Use the latest stable version
+    }
+}
+
 allprojects {
     repositories {
         google()
