--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,15 @@ dependencies:
   url_launcher: ^6.0.20
  
   webview_flutter: ^3.0.4 
-
+  firebase_core: ^2.20.0  # Adjusted to a compatible version
+  firebase_auth: ^4.16.0  # Compatible version
+  cloud_firestore: ^4.6.0
+  image_picker: ^1.1.2
+  firebase_storage: ^11.6.5
+  csv: ^5.0.0
+  file_picker: ^5.0.0 
+  
+  google_sign_in: ^6.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -128,7 +136,9 @@ flutter:
   - assets/book publisher.webp
   - assets/conferance.avif
   - assets/research.jpeg
-  - assets/blessed sir.webp
+  - assets/blessed sir.webp 
+  - assets/user (2).png
+  - assets/teachers_data.csv
   
   
 
